kubernetes/clusters/home/4-apps/utils/llama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-server
  namespace: utils
spec:
  ports:
    - name: http
      port: 9931
      targetPort: 9931
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: llama-server
  namespace: utils
  labels:
    kubernetes.io/service-name: llama-server
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9931
endpoints:
  - addresses:
      - 192.168.1.123
