kubernetes/clusters/home/4-apps/utils/llama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama-ingress
  namespace: utils
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - elodin.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: elodin.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama-server
                port:
                  number: 9931
